<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Travelers</string>

    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="postedImage">PostImage</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget/Reset password?</string>
    <string name="login">Login</string>

    <string name="create_a_new_account">Create a new account</string>
    <string name="signup">signup</string>
    <string name="user_name">Name</string>
    <string name="account_creation_failed">Failed to create account</string>
    <string name="empty_fields_signup_activity">Fill in all the fields</string>
    <string name="verification_Email_sent">Verification email sent</string>

    //Firebase Database
    <string name="dbname_users">users</string>
    <string name="username">username</string>
    <string name="new_post_menu">New Post</string>
    <string name="sign_out">Sign out</string>

    <string name="userImage">Image inside profile</string>
    <string name="postImage">PostImage</string>
    <string name="add_post_next">Next</string>
    <string name="share">Share</string>
    <string name="about_image">About Image</string>
    <string name="share_image">share_image</string>
    <string name="location">location</string>
    <string name="currentLocation">Current Location</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo" tools:keep="@string/profile_photo">profile_photo</string>
    <string name="dbname_photos">photos</string>
    <string name="db_image_path">image_path</string>
    <string name="db_location">location</string>
    <string name="db_caption">caption</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_image_path">profile_image_path</string>
    <string name="city">city</string>
    <string name="about_me">about_me</string>
    <string name="done">Done</string>
    <string name="dbname_saved_photos">saved_photos</string>
    <string name="favourite">favourite</string>
    <string name="db_photo_id">photo_id</string>
    <string name="open_camera">Open Camera</string>
    <string name="db_fileType">imageFile</string>
    <string name="capturing_video">capturing video</string>
    <string name="widget_empty_string">No saved locations</string>
    <string name="cross_image_description">Closing the activity</string>
    <string name="tick_mark">selected image</string>
    <string name="video_icon">video icon</string>
    <string name="photo_upload_progress">photo upload progress:</string>
    <string name="profile_name_hint">profile name</string>
    <string name="about_me_hint">About me</string>
    <string name="city_hint">City</string>
    <string name="not_favourite_description">not favourite</string>
    <string name="favourite_descrip">favourite</string>
    <string name="add_new_fab">Add new FAB</string>
    <string name="photo_upload_failed">photo upload failed</string>
    <string name="photo_upload_success">photo upload success</string>
    <string name="reset_password">Reset Password</string>
    <string name="ask_for_password_reset">Do you want to reset your password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_link_to_email">Reset Link sent to your email</string>
    <string name="user_not_registered">user not registered</string>
    <string name="email_not_verified">Email is not verified   check your inbox</string>
    <string name="authority">ramji.travelers</string>
    <string name="date_format">yyyyMMdd_HHmmss</string>
    <string name="image_name">TRAV_JPEG_</string>
    <string name="video_format">.mp4</string>
    <string name="video_name">/Travelers</string>
    <string name="image_format">.jpg</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="video">VIDEO</string>
    <string name="shared">Shared</string>
    <string name="saved">Saved</string>


</resources>
