<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/login_signup_padding"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:padding="@dimen/login_signup_tv_padding"
        android:textSize="@dimen/title_text_size"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/input_type_size"
        android:inputType="textPersonName"
        android:hint="@string/full_name"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/input_type_size"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/input_type_size"

        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>

