<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nextBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="@dimen/add_post_text_padding"
        android:background="@drawable/bottom_border">

        <ImageView
            android:id="@+id/crossImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cross_image_description" />

        <TextView
            android:id="@+id/add_post_share"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:text="@string/share"
            android:textSize="@dimen/add_post_text"
            android:textColor="@android:color/black"
            android:drawablePadding="@dimen/add_post_text_padding"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/image_share_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/nextBar"
        android:padding="@dimen/add_post_text_padding">

        <ImageView
            android:id="@+id/shareImageView"
            android:layout_width="@dimen/share_image"
            android:layout_height="@dimen/share_image"
            android:contentDescription="@string/share_image" />

        <EditText
            android:id="@+id/imageDescriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/about_image"
            android:textSize="@dimen/image_description_tv" />

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/location_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_below="@+id/image_share_LL"
        android:padding="@dimen/add_post_text" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/location_search"
        android:text="@string/currentLocation"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/add_post_text_padding"
        android:paddingEnd="@dimen/add_post_text_padding"
        android:drawablePadding="@dimen/add_post_text"
        android:drawableStart="@drawable/ic_pick_location" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/location_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentLocation"
        android:padding="@dimen/add_post_text" />

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>