<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nextBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="@dimen/add_post_text_padding"
        android:background="@drawable/bottom_border">

        <ImageView
            android:id="@+id/crossImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cross_image_description" />

        <Spinner
            android:id="@+id/spinnerDirectory"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/crossImage" />

        <TextView
            android:id="@+id/add_post_next"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:text="@string/add_post_next"
            android:textSize="@dimen/add_post_text"
            android:textColor="@android:color/black"
            android:drawablePadding="@dimen/add_post_text_padding"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_images_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/nextBar" />

    <Button
        android:id="@+id/openCameraBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_camera"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <SurfaceView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_post_ht"
        android:layout_below="@id/nextBar"
        android:src="@drawable/ic_camera_capture"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/capture_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_capture"
        android:layout_below="@id/videoView"
        android:layout_marginTop="@dimen/capture_icon_top_margin"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/capturing_video"
        android:visibility="invisible" />


</RelativeLayout>